Created BallPhysics object for simulating the ball physics and integrated into project. Some fine tuning and collision logic still needs to be implemented.

--- a/BouncyBall/BouncyBall.csproj
+++ b/BouncyBall/BouncyBall.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Ball.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="BallPhysics.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
